# cv_filters

./: .travis.yml  CMakeLists.txt  README.md
box_filter/: boxf  boxf.cpp
box_filter/pictures/: volt.ppm  volt_gaussn.ppm  volt_gaussn_boxf.ppm
diffusion/: CMatrix.h  Makefile  diffusion  diffusion.cpp
diffusion/pictures/: tower.ppm  tower_gaussn_PeronaMalik.ppm  tower_gaussn_Potts.ppm  tower_gaussn_TV.ppm  tower_gaussn_dual.ppm
gauss_filter/: Makefile  gaussf.cpp
gauss_noise/: Makefile  gaussn.cpp
nlm_filter/: Makefile  fallingMangoes_gaussn.ppm  fallingMangoes_gaussn_nlm.ppm  nlm.cpp
wavelet_decompose/: Makefile  wavelet.cpp
wavelet_filter/: CTensor.h  Makefile  waveletf  waveletf.cpp
wavelet_filter/pictures/: volt_gaussn_coeff.ppm  volt_gaussn_recovered.ppm
